--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,26 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap core CSS     -->
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!--  Paper Dashboard core CSS    -->
+  <link href="./assets/css/paper-dashboard.css" rel="stylesheet"/>
+
+  <!-- Theme -->
+  <link id="theme" href="./assets/css/lightTheme.css" rel="stylesheet"/>
+
+  <!-- Sweet Alert -->
+  <link href="./assets/css/sweetalert2.min.css" rel="stylesheet" />
+
+  <!--  Fonts and icons     -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+  <link href="./assets/css/themify-icons.css" rel="stylesheet">
+  
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
