--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>CorttezaCampaigns</title>
@@ -10,10 +11,10 @@
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
 
   <!--  Paper Dashboard core CSS    -->
-  <link href="./assets/css/paper-dashboard.css" rel="stylesheet"/>
+  <link href="./assets/css/paper-dashboard.css" rel="stylesheet" />
 
   <!-- Theme -->
-  <link id="theme" href="./assets/css/lightTheme.css" rel="stylesheet"/>
+  <link id="theme" href="./assets/css/lightTheme.css" rel="stylesheet" />
 
   <!-- Sweet Alert -->
   <link href="./assets/css/sweetalert2.min.css" rel="stylesheet" />
@@ -22,10 +23,17 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
   <link href="./assets/css/themify-icons.css" rel="stylesheet">
-  
+
+  <!-- File upload with preview Styles -->
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/file-upload-with-preview@4.0.2/dist/file-upload-with-preview.min.css">
+
 </head>
+
 <body>
   <app-root></app-root>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
+
 </html>
